@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.623 2006/05/18 00:35:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.624 2006/05/19 16:25:20 rocket Exp $
+
+  19 May 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
+  modules/generic_stage_target.py:
+  Fix DIGESTS output
 
   16 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/rc-update.sh:
